# CI2024_lab2

./: .gitignore  README.md  pyproject.toml  tsp.ipynb
