[tool.poetry]
name = "ci2024-lab2"
version = "0.1.0"
description = ""
authors = ["Andrea Delli <andrea.delli2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
logging = "^0.4.9.6"
pandas = "^2.2.3"
numpy = "^2.1.2"
geopy = "^2.4.1"
networkx = "^3.4.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
